--- a/config.yaml
+++ b/config.yaml
@@ -17,8 +17,8 @@ beef:
     # Credentials to authenticate in BeEF.
     # Used by both the RESTful API and the Admin interface
     credentials:
-        user:   "kali"
-        passwd: "kali"
+        user:   "REDACTED"
+        passwd: "REDACTED"
 
     # Interface / IP restrictions
     restrictions:
